# Nexus

./: .gitignore  README.md  SPONSOR_USAGE_DETAILED.md  docker-compose.yml  run.sh
backend/: Dockerfile.worker  pyproject.toml
backend/app/: __init__.py  config.py  context_engine.py  discovery.py  entity_hash.py  entity_identity.py  main.py  mock_stream.py  normalization.py  parsers.py  redis_client.py  schemas.py  tinyfish_runner.py
backend/app/routers/: agent.py  sessions.py
backend/app/workers/: normalizer.py
backend/tests/: test_identity_and_normalization.py  test_parsers.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: graphqlClient.ts  rest.ts  subscriptions.ts
frontend/src/components/: HomeLanding.tsx  SessionCockpit.tsx
frontend/src/components/graph/: ForceGraph.tsx  colors.ts
frontend/src/components/layout/: BottomBar.tsx  Header.tsx
frontend/src/components/panels/: AgentPanel.tsx  FinalReportModal.tsx  GraphPanel.tsx  LivePreviewModal.tsx  NodeDetailPanel.tsx  SourcePreviewDrawer.tsx
frontend/src/hooks/: useSessionSubscriptions.ts
frontend/src/store/: nexus.ts
frontend/src/types/: schema.ts
router/: package-lock.json  package.json  router-config.yaml
router/subgraphs/: base.graphql  research.graphql
