[project]
name = "nexus-backend"
version = "0.1.0"
description = "FastAPI backend for Nexus: drives TinyFish, enqueues Redis stream normalization jobs, and publishes realtime graph events for Cosmo subscriptions."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "tinyfish>=0.2.5",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
